# advent-of-code.cpp

./: .gitignore  CMakeLists.txt  Makefile  WORKSPACE.bazel
2021/day01/: BUILD.bazel  CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  test.cpp
2021/day02/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  test.cpp
2021/day03/: CMakeLists.txt  lib.cpp  main.cpp  test.cpp
common/: lib.hpp  main.cpp  test.cpp
