load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
	name = "2021_01_lib",
	srcs = ["lib.cpp"],
	hdrs = ["lib.hpp"],
)

cc_binary(
	name = "2021_01",
	srcs = ["main.cpp"],
	deps = [
		":2021_01_lib",
	],
)

cc_test(
	name = "2021_01_test",
	srcs = ["lib_test.cpp"],
	deps = [
		"@com_google_googletest//:gtest_main",
		":2021_01_lib",
	],
	size = "small",
)
